tests/snapshots/integration_tests__snapshot_tests__array_equiv_1.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_equiv_1.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ i+0 c+0)) Z) (Read_Int_Int b+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int b+2 i+2 (+ i+2 c+2)) (- i+0 1)) (Read_Int_Int b+2 (- i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) i+0) c+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ i+0 c+0)) i+0) (+ i+0 c+0))",
        "(= (Read_Int_Int (Write_Int_Int a+1 i+1 c+1) (- i+0 1)) (Read_Int_Int a+1 (- i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ 1 (Read_Int_Int a+0 (- i+0 1)))) i+0) (+ 1 (Read_Int_Int a+0 (- i+0 1))))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) (- i+3 1)) (Read_Int_Int a+0 (- i+3 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) (- i+2 1)) (Read_Int_Int a+0 (- i+2 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ 1 (Read_Int_Int a+0 (- i+0 1)))) (- i+0 1)) (Read_Int_Int a+0 (- i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 c+0) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ 1 (Read_Int_Int a+0 (- i+0 1)))) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+2 i+2 c+2) (- i+0 1)) (Read_Int_Int a+2 (- i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+1 i+1 (+ 1 (Read_Int_Int a+1 (- i+1 1)))) (- i+0 1)) (Read_Int_Int a+1 (- i+0 1)))",
    ],
}
