tests/snapshots/integration_tests__snapshot_tests__array_horn_copy2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_horn_copy2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int B i+0)) i+0) (Read_Int_Int B i+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int B i+0)) Z) (Read_Int_Int a+0 Z))",
    ],
}
